[tool.poetry]
name = "massiso"
version = "0.0.1"
description = "If you're tired of the complex process of creating and configuring projects with fastapi, pywebview and vue modules, TRY IT!!!"
authors = ["Gnix <madkarl@outlook.com>"]
license = "MIT"
readme = "README.md"
include = ["**/*.env"]

[tool.poetry.scripts]
mas = "massiso.gui.main:main"
mas-cli = "massiso.cli.main:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pywebview = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
